--- a/package.json
+++ b/package.json
@@ -5,9 +5,20 @@
   "main": "./lib/server/index.js",
   "bin": "./bin/index.js",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "json-server": "^0.9.4",
+    "lodash": "^4.17.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-favicon": "0.0.11",
-    "redux-thunk": "^2.2.0"
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "webpack": "^3.10.0"
   },
   "scripts": {
     "start": "json-server --port 3000 --watch db.json"
